--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -297,8 +297,8 @@ input[ type="radio"] {
 
         content: '✔';
         position: relative;
-        top: 0; 
-        left: 0.25em;
+        top: -0.1em; 
+        left: 0.30em;
         font-size: 0.85em ;
         color: $white-color ;
         visibility: hidden ;
