changes according to new style class naming-spec
extra style will be now named with format: *s-name*.
for name associate to css propertie, take the three first letters.
for example (shadow-bottom style become s-sha-b where s- = style-)

--- a/src/sass/features/_collections.scss
+++ b/src/sass/features/_collections.scss
@@ -4,12 +4,12 @@ ________________________________________________________________________________
 
 
 @import 'collections/i_block.scss' ;
-@import 'collections/s_style.scss' ;
-@import 'collections/sb_style.scss' ;
-@import 'collections/st_style.scss' ;
-@import 'collections/sl_style.scss' ;
-@import 'collections/sr_style.scss' ;
-@import 'collections/r_style.scss' ;
-@import 'collections/rm_style.scss' ;
-@import 'collections/rd_style.scss' ;
+@import 'collections/sha_style.scss' ;
+@import 'collections/sha_b_style.scss' ;
+@import 'collections/sha_t_style.scss' ;
+@import 'collections/sha_l_style.scss' ;
+@import 'collections/sha_r_style.scss' ;
+@import 'collections/rad_style.scss' ;
+@import 'collections/rad_ld_style.scss' ;
+@import 'collections/rad_rd_style.scss' ;
 @import 'collections/collection.scss' ;
