--- a/src/sass/features/_navbars.scss
+++ b/src/sass/features/_navbars.scss
@@ -5,12 +5,12 @@ ________________________________________________________________________________
 
 @import 'navbars/i_nav.scss' ;
 @import 'navbars/mi_style.scss' ;
-@import 'navbars/b_style.scss' ;
-@import 'navbars/bb_style.scss' ;
+@import 'navbars/bor_style.scss' ;
+@import 'navbars/bor_b_style.scss' ;
 @import 'navbars/bg_style.scss' ;
-@import 'navbars/bl_style.scss' ;
-@import 'navbars/br_style.scss' ;
-@import 'navbars/bt_style.scss' ;
+@import 'navbars/bor_l_style.scss' ;
+@import 'navbars/bor_r_style.scss' ;
+@import 'navbars/bor_t_style.scss' ;
 @import 'navbars/b_fixed.scss' ;
 @import 'navbars/t_fixed.scss' ;
 @import 'navbars/mi_bar.scss' ;
