--- a/src/sass/features/navbars/_bg_style.scss
+++ b/src/sass/features/navbars/_bg_style.scss
@@ -4,7 +4,7 @@ ________________________________________________________________________________
 
 
 
-.i-nav.bg-style { //background style for selection
+.i-nav.s-bg { //background style for selection
 
     >ul li {
 
