--- a/src/sass/features/navbars/_mi_style.scss
+++ b/src/sass/features/navbars/_mi_style.scss
@@ -43,7 +43,7 @@ ________________________________________________________________________________
         }
     }
 
-    /*&.bb-style {
+    /*&.s-bor-b {
 
         >ul >li ul {
 
