--- a/src/sass/features/tables/_cel_style.scss
+++ b/src/sass/features/tables/_cel_style.scss
@@ -3,7 +3,7 @@
 _____________________________________________________________________________________*/
 
 
-table.cel-style { //cellule-style for cellule selection
+table.s-cel { //cellule-style for cellule selection
 
     tr:not( .unfocusable) td {
 
