apply changes according to new style class naming-spec
extra style will be now named with format: *s-name*.
in case of name associate to css propertie, take the three first letters.
for example, shadow-bottom style become `s-sha-b` where s- = style-.

**these changes are incompatibles with previous development (bellowed versions)**

--- a/src/sass/features/collections/_rad_rd_style.scss
+++ b/src/sass/features/collections/_rad_rd_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `rd-style` for `i-block` collections, ...
-_____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of border-radius design on right diagonal for collections, ...
+________________________________________________________________________________________________________________*/
 
 
-.i-block.rd-style { // partial (right-top, left-bottom) border-radius with box's style 
+.i-block.s-rad-rd { // partial (right-top, left-bottom) border-radius with box's style 
 
     padding-left: $block-rlr-padding ;
     padding-right: $block-rlr-padding ;
