--- a/src/sass/features/collections/_rad_style.scss
+++ b/src/sass/features/collections/_rad_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `r-style` for `i-block` collections, ...
-_____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of border-radius design for collections, ...
+______________________________________________________________________________________________*/
 
 
-.i-block.r-style { // full border-radius with box's style
+.i-block.s-rad { // full border-radius with box's style
     
     border-radius: $block-r-radius ;
     padding-left: $block-rlr-padding ;
