--- a/src/sass/features/collections/_sha_b_style.scss
+++ b/src/sass/features/collections/_sha_b_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `sb-style` for `i-block` collections, ...
-_____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of shadow-bottom design for collections, ...
+______________________________________________________________________________________________*/
 
 
-.i-block.sb-style { //more shadow-bottom with box's style 
+.i-block.s-sha-b { //more shadow-bottom with box's style 
 
     box-shadow: 0px 6px 7px $block-s-shadow-color ;
     padding: $block-stb-padding $block-slr-padding ;
