--- a/src/sass/features/collections/_sha_l_style.scss
+++ b/src/sass/features/collections/_sha_l_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `sl-style` for `i-block` collections, ...
+* For default theme. Here is the style definition of shadow-left design for collections, ...
 _____________________________________________________________________________________________*/
 
 
-.i-block.sl-style { //more shadow-left with box's style 
+.i-block.s-sha-l { //more shadow-left with box's style 
 
     box-shadow: -6px 0px 7px $block-s-shadow-color ;
     padding: $block-stb-padding $block-slr-padding ;
