--- a/src/sass/features/collections/_sha_r_style.scss
+++ b/src/sass/features/collections/_sha_r_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `sr-style` for `i-block` collections, ...
+* For default theme. Here is the style definition of shadow-right design for collections, ...
 _____________________________________________________________________________________________*/
 
 
-.i-block.sr-style { //more shadow-right with box's style 
+.i-block.s-sha-r { //more shadow-right with box's style 
 
     box-shadow: 6px 0px 7px $block-s-shadow-color ;
     padding: $block-stb-padding $block-slr-padding ;
