--- a/src/sass/features/collections/_sha_t_style.scss
+++ b/src/sass/features/collections/_sha_t_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `st-style` for `i-block` collections, ...
-_____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of shadow-top design for collections, ...
+___________________________________________________________________________________________*/
 
 
-.i-block.st-style { //more shadow-top with box's style 
+.i-block.s-sha-t { //more shadow-top with box's style 
 
     box-shadow: 0px -6px 7px $block-s-shadow-color ;
     padding: $block-stb-padding $block-slr-padding ;
