--- a/src/sass/features/navbars/_bor_b_style.scss
+++ b/src/sass/features/navbars/_bor_b_style.scss
@@ -3,7 +3,7 @@
 _________________________________________________________________________________________________*/
 
 
-.i-nav.bb-style { //border-bottom style for selection
+.i-nav.s-bor-b { //border-bottom style for selection
 
     &>ul>li>a {
 
