--- a/src/sass/features/navbars/_bor_l_style.scss
+++ b/src/sass/features/navbars/_bor_l_style.scss
@@ -3,7 +3,7 @@
 _______________________________________________________________________________________________*/
 
 
-.i-nav.bl-style { //border-left style for selection
+.i-nav.s-bor-l { //border-left style for selection
 
     >ul li {
 
