--- a/src/sass/features/navbars/_bor_r_style.scss
+++ b/src/sass/features/navbars/_bor_r_style.scss
@@ -3,7 +3,7 @@
 ________________________________________________________________________________________________*/
 
 
-.i-nav.br-style { //border-right style for selection
+.i-nav.s-bor-r { //border-right style for selection
 
     >ul li {
 
