--- a/src/sass/features/navbars/_bor_style.scss
+++ b/src/sass/features/navbars/_bor_style.scss
@@ -2,7 +2,7 @@
 * For default theme. Here is the style definition of border design for selection in navbar.
 __________________________________________________________________________________________*/
 
-.i-nav.b-style { //border style for selection
+.i-nav.s-bor { //border style for selection
 
     >ul li {
 
