--- a/src/sass/features/navbars/_bor_t_style.scss
+++ b/src/sass/features/navbars/_bor_t_style.scss
@@ -3,7 +3,7 @@
 _________________________________________________________________________________________________*/
 
 
-.i-nav.bt-style { //border-top style for selection
+.i-nav.s-bor-t { //border-top style for selection
 
     >ul li {
 
