--- a/src/sass/features/collections/_rad_ld_style.scss
+++ b/src/sass/features/collections/_rad_ld_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `rm-style` for `i-block` collections, ...
-_____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of border-radius design on left diagonal for collections, ...
+_______________________________________________________________________________________________________________*/
 
 
-.i-block.rm-style { // partial (left-top, right-bottom) border-radius with box's style 
+.i-block.s-rad-ld { // partial (left-top, right-bottom) border-radius with box's style 
 
     padding-left: $block-rlr-padding ;
     padding-right: $block-rlr-padding ;
