--- a/src/sass/features/collections/_sha_style.scss
+++ b/src/sass/features/collections/_sha_style.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `s-style` for `i-block` collections, ...
-____________________________________________________________________________________________*/
+* For default theme. Here is the style definition of shadow design for collections, ...
+_______________________________________________________________________________________*/
 
 
-.i-block.s-style { //more shadow with box's style 
+.i-block.s-sha { //more shadow with box's style 
 
     box-shadow: 0px 0px 10px $block-s-shadow-color ;
     padding: $block-stb-padding $block-slr-padding ;
