add new style class

--- a/src/sass/features/_collections.scss
+++ b/src/sass/features/_collections.scss
@@ -10,6 +10,8 @@ ________________________________________________________________________________
 @import 'collections/sha_l_style.scss' ;
 @import 'collections/sha_r_style.scss' ;
 @import 'collections/rad_style.scss' ;
+@import 'collections/rad_l_style.scss' ;
+@import 'collections/rad_r_style.scss' ;
 @import 'collections/rad_ld_style.scss' ;
 @import 'collections/rad_rd_style.scss' ;
 @import 'collections/collection.scss' ;
